--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dasmoto's Arts & Crafts</title>
-    <link rel="stylesheet" href="/semilb.github.io/main/index.css">  
+    <link rel="stylesheet" href="https://semilb.github.io/main/index.css">    
 </head>
 
 <body>
