--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dasmoto's Arts & Crafts</title>
-    <link rel="stylesheet" href="css/index.css">       
+    <link rel="stylesheet" type="text/css" href="blob/css/index.css">       
 </head>
 
 <body>
