--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>You Need To Chill</title>
-    <link rel="stylesheet" type="text/css" href="index.css">         
+    <link rel="stylesheet" href="index.css">
 </head>
 
-<html>
- 
 <body>
+
   <h1>Susan Milb</h1>
-  <p>Welcome to my super fun website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <p>Welcome to my website!  I am learning how to design websites.  Marvel in wonder as I style this webpage with ease.</p> 
+    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+
 </body>
- 
+
 </html>
